[gd_scene load_steps=9 format=3 uid="uid://bloqrx3o1b3c3"]

[ext_resource type="Script" path="res://editor/side_editors/salvage_editor/salvage_editor.gd" id="1_gotpp"]
[ext_resource type="Script" path="res://data/salvage_point_data.gd" id="2_jrhgn"]
[ext_resource type="PackedScene" uid="uid://ctxog6bj0oha7" path="res://level_elements/salvages/salvage_point.tscn" id="3_ycw40"]
[ext_resource type="Script" path="res://editor/property_editors/object_grid_chooser.gd" id="4_3pjd2"]
[ext_resource type="PackedScene" uid="uid://h5opptcugh0i" path="res://level_elements/doors_locks/door.tscn" id="4_hhje5"]

[sub_resource type="Resource" id="Resource_2arxy"]
script = ExtResource("2_jrhgn")
sid = 0
is_output = false
position = Vector2i(0, 0)

[sub_resource type="Resource" id="Resource_dp0u5"]
script = ExtResource("2_jrhgn")
sid = 0
is_output = false
position = Vector2i(0, 0)

[sub_resource type="Resource" id="Resource_x2cdp"]
script = ExtResource("2_jrhgn")
sid = 0
is_output = true
position = Vector2i(0, 0)

[node name="SalvagePointEditor" type="MarginContainer"]
offset_right = 212.0
offset_bottom = 333.0
script = ExtResource("1_gotpp")
data = SubResource("Resource_2arxy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="SalvageEdit" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Salvage Point Editor"

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(32, 48)
layout_mode = 2

[node name="SalvagePoint" parent="VBoxContainer/CenterContainer" instance=ExtResource("3_ycw40")]
unique_name_in_owner = true
layout_mode = 2
data = SubResource("Resource_2arxy")
ignore_position = true
hide_number = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "SID: "

[node name="SID" type="SpinBox" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
min_value = -1.0
max_value = 999.0

[node name="TypeChoice" type="Container" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(42, 42)
layout_mode = 2
script = ExtResource("4_3pjd2")
color_rect_extend = 4

[node name="Input" parent="VBoxContainer/TypeChoice" instance=ExtResource("3_ycw40")]
layout_mode = 2
mouse_filter = 2
data = SubResource("Resource_dp0u5")
ignore_position = true
hide_number = true

[node name="Output" parent="VBoxContainer/TypeChoice" instance=ExtResource("3_ycw40")]
layout_mode = 2
mouse_filter = 2
data = SubResource("Resource_x2cdp")
ignore_position = true
hide_number = true

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="VBoxContainer/CenterContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "Input Point"

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Currently salvaged door:"

[node name="DoorScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/DoorScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="Door" parent="VBoxContainer/DoorScrollContainer/CenterContainer" instance=ExtResource("4_hhje5")]
unique_name_in_owner = true
layout_mode = 2
ignore_position = true
